		* [NH-2199] - null values in maps/dictionaries are no longer silenty ignored/deleted
		* [NH-1894] - SybaseAnywhereDialect has been removed, and replaced with SybaseASA9Dialect.
					- Sybase Adaptive Server Enterprise (ASE) dialects removed.

	##### Possible Breaking Changes #####
		* [NH-2251] - Signature change for GetLimitString in Dialect
		* [NH-2284] - Obsolete members removed

Build 3.0.0.Alpha3 (rev5226)
=============================

** Bug
    * [NH-1927] - Criteria generates wrong sql when eager fetching one-to-many with filter
    * [NH-1928] - SQL line comments swallow next line
    * [NH-2024] - Max results parameter could not provided to subquery
    * [NH-2061] - Merge operation causes null exception for null components that contain many-to-many relations
    * [NH-2096] - IndexOutOfRangeException reading zero-length binary value from MySQL
    * [NH-2112] - Update executed on the DB during a Session.Merge of an unmodified entity
    * [NH-2138] - Entity name support in custom SQL is broken: sql-query/return/@entity-name attribute is ignored
    * [NH-2147] - default_batch_fetch_size has no effect
    * [NH-2188] - Exception occurs when configuration searches default config file and multiple search path were defined for current AppDomain.
    * [NH-2202] - Unable to use ICriteria with projection property that references a composite key relationship
    * [NH-2258] - Paging params in subquery breaks query execution.
    * [NH-2265] - Any linq query using oracle fails when restricting the number of results returned
    * [NH-2270] - NHibernatethrows MappingException on Linux/Mono 2.7
    * [NH-2279] - PersistentIdentifierBag fails to maintain ID map in many cases
    * [NH-2288] - The drop scripts from SchemaExport in SQL2005 dialect will not work for constraints when using DefaultSchema setting other than dbo
    * [NH-2289] - Linq query fail when using contains from ICollection<T> or IList<T>